<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2015 sourcestream GmbH

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
    <!-- Main Config -->
    <string name="app_name">Spax</string>
    <string name="title_activity_maps">Map</string>

    <!-- MovieList Controller -->
    <string name="noConnection">Unable to fetch data from server.</string>
    <string name="loadingMore">Loading more…</string>

    <!-- MovieDetails Controller -->
    <string name="min">min.</string>
    <string name="voteCount">votes</string>
    <string name="noOverview">Sorry, currently there is no overview for this movie.</string>
    <string name="noBiography">Sorry, currently there is no biography for this actor.</string>
    <string name="relatedMovies">RELATED MOVIES</string>
    <string name="relatedTV">RELATED TV SHOWS</string>

    <!-- CastDetails -->
    <string name="alsoKnownAs">Also known as:</string>
    <string name="knownFor">KNOWN FOR</string>
    <string name="showMore">SHOW ALL</string>

    <!-- TVDetails -->
    <string name="type">Type:</string>
    <string name="firstAirDate">First air date:</string>
    <string name="lastAirDate">Last air date:</string>
    <string name="numberOfEpisodes">Number of episodes:</string>
    <string name="numberOfSeasons">Number of seasons:</string>

    <!-- About View -->
    <string name="aboutApp" translatable="false">Spax Software</string>
    <string name="TMDbText" translatable="false">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="TMDbLegalNotice" translatable="false">TMDb respects the rights of copyright holders and publishers and requires all users to confirm they own the copyright or have permission from the copyright holder to upload content. We comply with the Kenya Film Classification Board (KFCB) and expeditiously remove content when properly notified, unless it reasonably appears to us that the content does not infringe upon copyright. Please note, however, any person who knowingly materially misrepresents that material or activity is a copyright infringement may be subject to liability for damages. You should educate yourself as to whether content does, in fact infringe upon your copyright, or whether, for instance "fair use" applies. If you are unsure whether the content you are reporting is infringing your legal rights, you may wish to seek legal guidance. Keep in mind that submitting intentionally misleading reports of infringement may be punishable under the laws of Kenya.</string>
    <string name="aboutSupport">Support:\u0020</string>
    <string name="aboutSupportMail" translatable="false">info@spaxsoftwareinc.ke</string>
    <string name="aboutSourcestream" translatable="false">spaxsoftware GmbH</string>
    <string name="aboutWebSite" translatable="false">www.spaxsoftwareinc.ke</string>
    <string name="MailSubject">Subject</string>
    <string name="MailDesc">Describe your question here.</string>
    <string name="MailSend">Send E-mail Using:</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Locate</item>
        <item>Movies</item>
        <item>TV shows</item>
        <item>Genres</item>
        <item>Notifications</item>
        <item>My Orders</item>
        <item>Orders History</item>
        <item>Settings</item>
        <item>About</item>
        <item>Privacy Policy</item>
    </string-array>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_map">Locate</string>
    <string name="nav_home">Movies</string>
    <string name="nav_photos">TV Shows</string>
    <string name="nav_movies">Genres</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_cartitems">View Cart</string>
    <string name="nav_orders">My Orders</string>
    <string name="nav_orders_history">Orders History</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- ActionBar titles -->
    <string name="moviesTitle">Movies</string>
    <string name="tvTitle">TV shows</string>
    <string name="genresTitle">Genres</string>

    <!-- Movies tabs -->
    <string-array name="moviesTabs">
        <item>Upcoming</item>
        <item>Now Playing</item>
        <item>Popular</item>
        <item>Top Rated</item>
    </string-array>

    <!-- TV tabs -->
    <string-array name="tvTabs">
        <item>On the Air</item>
        <item>Airing Today</item>
        <item>Popular</item>
        <item>Top Rated</item>
    </string-array>

    <!-- detailTabs tabs -->
    <string-array name="detailTabs">
        <item>Info</item>
        <item>Cast</item>
        <item>Overview</item>
    </string-array>

    <!-- Cast detailTabs tabs -->
    <string-array name="castDetailTabs">
        <item>Info</item>
        <item>Credits</item>
        <item>Biography</item>
    </string-array>

    <!-- Search -->
    <string name="search_title">Search</string>
    <string name="search_hint">Search…</string>
    <string name="nomoreresults">No more results.</string>
    <string name="noResults">Sorry, no results found.</string>
    <string name="timeout">Connection timed out, please try again</string>

    <!-- Youtube -->
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <string name="action_settings">Settings</string>

    <!-- Map Search -->
    <string name="action_voice_rec">action voice rec</string>
    <string name="action_location">action location</string>
    <string name="action_taxi">action taxi</string>
    <string name="action_change_colors">change style</string>

    <!-- Map Search Activity -->
    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>
    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="intro_message">
        <![CDATA[


            This sample uses the Google Places Geo Data API for Android to provide autocomplete suggestions.
            It shows how to use a custom Adapter to display suggestions in an AutocompleteTextView.
            Once selected, details about a place are retrieved based on its Place id from the
            Places Geo Data API.


        ]]>
    </string>

    //ImagePicker class
    <string name="profile_img">profile_img</string>

</resources>